--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-467.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 134.195.196.89, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-349.0KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇦 加拿大-380.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.48MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.89, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 134.195.196.89, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-2.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 134.195.196.89, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-323.3KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: 120.241.236.216, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.85MB/s(Youtube:不良林), server: 120.241.236.113, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-832.8KB/s(Youtube:不良林), server: 120.233.150.132, port: 16129, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.54MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11174, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-970.9KB/s(Youtube:不良林), server: 134.195.196.89, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-747.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.26MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-323.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-832.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
