--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: 116.129.254.192, port: 16262, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-975.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: 116.129.254.192, port: 16244, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-797.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.89, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1015.6KB/s(Youtube:不良林), server: 120.233.29.168, port: 16203, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-970.9KB/s(Youtube:不良林), server: 134.195.196.89, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-747.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-975.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1001.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1015.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
