--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.98MB/s(Youtube:不良林), server: 120.241.236.215, port: 16218, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.55MB/s(Youtube:不良林), server: 120.241.236.216, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: 116.129.254.192, port: 16306, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.09MB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: 116.129.254.192, port: 16249, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.83MB/s(Youtube:不良林), server: 36.139.153.214, port: 45251, type: ss, cipher: chacha20-ietf-poly1305, password: 87e5ef91-0cae-4454-9f95-a402c75c0dfa}
+  - {name: 🇺🇸 美国-541.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 116.129.254.192, port: 16131, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-821.9KB/s(Youtube:不良林), server: 120.241.236.218, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.46MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-970.9KB/s(Youtube:不良林), server: 134.195.196.89, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-747.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.26MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-970.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
