--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-13.83MB/s(Youtube:不良林), server: 36.139.153.214, port: 45251, type: ss, cipher: chacha20-ietf-poly1305, password: 87e5ef91-0cae-4454-9f95-a402c75c0dfa}
-  - {name: 🇺🇸 美国-541.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 116.129.254.192, port: 16131, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-821.9KB/s(Youtube:不良林), server: 120.241.236.218, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.46MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-502.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-579.0KB/s(Youtube:不良林), server: 120.241.236.218, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-462.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-747.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.89, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-541.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-747.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
