--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.68MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-502.6KB/s(Youtube:不良林), server: 134.195.196.89, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-579.0KB/s(Youtube:不良林), server: 120.241.236.218, port: 16216, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-462.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.86MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.84MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-573.4KB/s(Youtube:不良林), server: 120.233.29.168, port: 16248, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.55MB/s(Youtube:不良林), server: 120.241.236.216, port: 16114, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇦 加拿大-159.3KB/s(Youtube:不良林), server: 134.195.196.89, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.89, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.89, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-502.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.86MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-573.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-159.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
